--- a/index.html
+++ b/index.html
@@ -110,21 +110,23 @@
       
 
 <!-- What We Offer Section -->
-<div class="container py-5">
-  <h2 class="text-center mb-4">What We Offer</h2>
+<div class="container-fluid py-5" style="background: #dadadb;">
 
   <!-- Row 1: Database Development -->
   <div class="row align-items-center mb-4">
     <!-- Text -->
-    <div class="col-md-6">
-      <h3>Database Development</h3>
-      <p>Built from Scratch. Save time and money with a customized database solution tailored to your business needs.</p>
+    <div class="col-md-6 custom-box">
+      <h2 class="custom-heading text-center">Database Development</h2>
+      <p class="custom-paragraph">Built from Scratch. No one knows your business like you. Save time and money with a database solution that is customized to your business needs.
+  
+      Interested in converting your database from one software package to another? With our seasoned technicians, we can help you convert your existing database solutions and even your older FileMaker Pro databases to the latest version. Before the conversion, we will recommend the best plan for your particular needs.</p>
     </div>
     <!-- Icon/Image -->
     <div class="col-md-6 text-center">
-      <i class="bi bi-hdd-stack icon-size"></i>
+      <img src="img/dbdevlopment.webp" alt="Database Development" class="img-fluid service-img mx-auto">
     </div>
-  </div>
+
+  
 
   <!-- Row 2: Consulting -->
   <div class="row align-items-center mb-4">
