--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
         <img src="img/consulting.webp" alt="Consulting" class="img-fluid service-img mx-auto">
     </div>
     <!-- Text -->
-    <div class="col-md-6 ">
+    <div class="col-md-6 custom-box-left">
         <h2 class="custom-heading text-center">Consulting</h2>
-        <p class="custom-paragraph pe-3">Communication is our key to a successful business project. We look at all aspects of your organization and work with you to create the best solution. We can help you step-by-step through your entire project. Our approach is to understand your unique challenges and opportunities, ensuring that our solutions are perfectly tailored to your needs. Together, we will build a strategy that not only meets your current requirements but also paves the way for future growth and success.</p>
+        <p class="custom-paragraph ">Communication is our key to a successful business project. We look at all aspects of your organization and work with you to create the best solution. We can help you step-by-step through your entire project. Our approach is to understand your unique challenges and opportunities, ensuring that our solutions are perfectly tailored to your needs. Together, we will build a strategy that not only meets your current requirements but also paves the way for future growth and success.</p>
     </div>
   </div>
 
@@ -163,11 +163,32 @@
         <img src="img/hosting.webp" alt="Consulting" class="img-fluid service-img mx-auto">
     </div>
     <!-- Text -->
-    <div class="col-md-6 ">
+    <div class="col-md-6 custom-box-left ">
         <h2 class="custom-heading text-center">FileMaker Hosting </h2>
         <p class="custom-paragraph pe-3">Many clients want the added speed and functionality of FileMaker Server or FileMaker Server Advanced without the headache of maintaining a server or the added cost. That is where we come in. MyDBSolutions can host your solution for you at a competitive price. Our hosting services not only provide you with reliable and secure access to your databases but also include regular backups and maintenance, ensuring that your data is always safe and accessible. With our expert support and state-of-the-art infrastructure, you can focus on your business goals while we take care of the technical details.</p>
     </div>
   </div>
+</div>
+
+<div class="container-fluid py-5">
+  <div class="d-flex justify-content-center">
+    <div class="card w-75 mb-3 custom-shadow">
+      <div class="card-header custom-card-header">
+        <img src="img/lds_quote.jpeg" alt="Header Image" class="img-fluid" style="height: 200px; width: 300px;">
+      </div>
+      <div class="card-body">
+        <blockquote class="blockquote mb-0">
+          <p>"I want to thank you guys again for your work on our FileMaker Pro bidding solution. Everyone here is very impressed at the solution, and it is well received."</p>
+          <footer class="blockquote-footer py-3">S. Bartell <br><cite title="Source Title">Publishing Services Department- Church of Jesus Christ of Latter-Day Saints
+          </cite></footer>
+        </blockquote>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 
         
 
