--- a/index.html
+++ b/index.html
@@ -187,27 +187,52 @@
   </div>
 </div>
 
-
-
-
-        
-
-    <div class="container-fluid">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-          <div class="col-md-4 d-flex align-items-center">
-            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-              <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-            </a>
-            <span class="mb-3 mb-md-0 text-muted">&copy; 2024 Company, Inc</span>
-          </div>
-      
-          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
-            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
-            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
-          </ul>
-        </footer>
+  
+<div class="container-fluid" style="background: #49494b;">
+  <footer class="py-3 my-4 border-top" style="background: #49494b;">
+    <!-- Logo Column -->
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-4 text-center mb-3 mb-md-0">
+        <!-- Replace 'path-to-logo.jpg' with the actual path to your logo -->
+        <img src="img/logo/nav_logo.png" alt="Company Logo" class="img-fluid">
       </div>
+
+      <!-- Company Information Column -->
+      <div class="col-12 col-md-4 text-center mb-3 mb-md-0">
+        <div class="text-white mb-3">
+          &copy; 2024 Company, Inc
+        </div>
+        <div class="text-white">
+          3341 South 4000 West Suite #300<br>
+          West Valley, UT 84120<br>
+          Phone: <a href="tel:8016575373" class="text-white">801-657-5373</a><br>
+          Email: <a href="mailto:info@mydbsolutions.com" class="text-white">info@mydbsolutions.com</a>
+        </div>
+      </div>
+
+      <!-- Social Media Links Column -->
+      <div class="col-12 col-md-4 text-center">
+        <a href="https://twitter.com/mydbsolutions" class="social-link me-3" target="_blank">
+          <i class="bi bi-twitter text-white"></i>
+        </a>
+        <a href="https://www.facebook.com/MyDBSolutions/" class="social-link me-3" target="_blank">
+          <i class="bi bi-facebook text-white"></i>
+        </a>
+        <a href="https://www.linkedin.com/company/mydbsolutions/" class="social-link me-3 pe-2" target="_blank">
+          <i class="bi bi-linkedin text-white"></i>
+        </a>
+        <a href="tel:8016575373" class="phone-link text-white">
+          <i class="bi bi-telephone-fill"></i> (801)657-5373
+        </a>
+      </div>
+    </div>
+  </footer>
+</div>
+
+
+
+
+
 
 
 
