--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="container-fluid">
       <nav class="navbar sticky-top navbar-expand-sm navbar-light bg- px-4">
-        <a class="navbar-brand" href="index.php">
+        <a class="navbar-brand" href="#">
           <img src="img/logo/mydb.png" width="90" height="60" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto mt-2 mt-lg-0">	
             <li class="nav-item">
-              <a class="nav-link" href="index.php">Home</a>
+              <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Services</a>
