--- a/usar.html
+++ b/usar.html
@@ -101,7 +101,7 @@
             <!-- Text -->
             <div class="col-md-6 custom-box-left">
                 <h2 class="custom-heading text-center">MYDB Solutions - US&R</h2>
-                <p class="custom-paragraph ">The US&R Organizer began as a project that started in 2008 between <a href="https://www.uttf1.org/" target="_blank" > Utah Task Force One </a> and MyDB Solutions.
+                <p class="custom-paragraph px-3">The US&R Organizer began as a project that started in 2008 between <a href="https://www.uttf1.org/" target="_blank" > Utah Task Force One </a> and MyDB Solutions.
 
                     It has grown to meet additional requirements set by FEMA, while also expanding the capabilities to meet the individual demands of 12 different FEMA Search and Rescue teams.</p>
             </div>
@@ -112,7 +112,7 @@
             <!-- Text -->
             <div class="col-md-6 custom-box">
             <h2 class="custom-heading text-center">Expanding Capabilities</h2>
-            <p class="custom-paragraph">A number of improvements were made in this version to expanding the capabilities of the system to meet an ever growing list of requirements that each task force has requested. Each change is planned out and executed in a way that meets the needs of all group and not just a specific group. The main challenge with the expanding list of demands is to make each change relevant and usable for each group, while also making sure that a change does not get in the way of a group that might not want to use a requested feature.</p>
+            <p class="custom-paragraph px-3">A number of improvements were made in this version to expanding the capabilities of the system to meet an ever growing list of requirements that each task force has requested. Each change is planned out and executed in a way that meets the needs of all group and not just a specific group. The main challenge with the expanding list of demands is to make each change relevant and usable for each group, while also making sure that a change does not get in the way of a group that might not want to use a requested feature.</p>
             </div>
             <!-- Icon/Image -->
             <div class="col-md-6 text-center">
@@ -131,7 +131,7 @@
             <div class="col-md-6 custom-box-left">
                 <h2 class="custom-heading text-center">Continuing Support
                 </h2>
-                <p class="custom-paragraph ">US&R Organizer continues to grow, in 2024 we will hold a user summit with 30 representatives from various organizations coming to gain additional training with the system. Each summit we hold an open discussion to allow everyone to provide feedback and request new features, that are sure to improve the system for everyone in the future.
+                <p class="custom-paragraph px-3">US&R Organizer continues to grow, in 2024 we will hold a user summit with 30 representatives from various organizations coming to gain additional training with the system. Each summit we hold an open discussion to allow everyone to provide feedback and request new features, that are sure to improve the system for everyone in the future.
 
                     Extra care and attention was paid to each layout to improve the UI, while also taking into consideration the UX to streamline common tasks. One Task Force brought us an example of a task that they counted mouse clicks. It took them 17 mouse clicks to achieve the task. In version 3 we were able to get that task down to just 2 mouse clicks.
                     
